# neutralsites

./: CITATIONS.md  LICENSE  README.md  find_intergenic_regions.py  main.nf  main.py  modules.json  nextflow.config  nextflow_schema.json  pyproject.toml  start.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: awsfulltest.yml  awstest.yml  ci.yml  linting.yml
assets/: email_template.html  email_template.txt
conf/: base.config  test.config  test_full.config
lib/: WorkflowMain.groovy
modules/local/find_candidates/: environment.yml  main.nf
workflows/: neutralsites.nf
